[Sprint-2] Роли пользователей - Добавить в модель пользователя поле роль (возможные роли: USER;MANAGER) - Только MANAGER может назначать менять исполнителя у задачи